Added Loader support for NeoForge